deploy: 6688f531c6ac8d40af15e188de56555380e4dcda

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CR0IEuh_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CoODN2E3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BhK1LoOE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cv10GuM0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CtmmpzmT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BpDJUosl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.EI9MN6Vp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B946EbGa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.z9gJgu0s.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D1Dp5DyY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CouMW1-_.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1m8aldq = {
+					__sveltekit_1w74cz4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CR0IEuh_.js"),
-						import("./_app/immutable/entry/app.CtmmpzmT.js")
+						import("./_app/immutable/entry/start.BhK1LoOE.js"),
+						import("./_app/immutable/entry/app.BpDJUosl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
