deploy: d1b2e2fa978635fd581c70033f33fd5d663faf98

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ChUoMW5V.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BTndK-fy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0Z7KoxUh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.FqVSsiqi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D-Sh5f8v.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DuinOSSF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BiaXX6PQ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2z3QeeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BVIFs_YL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CRsqYwlF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CouMW1-_.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1755jq2 = {
+					__sveltekit_pjdwr4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ChUoMW5V.js"),
-						import("./_app/immutable/entry/app.D-Sh5f8v.js")
+						import("./_app/immutable/entry/start.0Z7KoxUh.js"),
+						import("./_app/immutable/entry/app.DuinOSSF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
