--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0Z7KoxUh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.FqVSsiqi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ujyuv-BX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SWNKg5Ps.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DuinOSSF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.UxvkzqiA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2z3QeeN.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CvKc8kNf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CRsqYwlF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B_KUC9cf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.B1xOigk7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BiQ8TT8c.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_pjdwr4 = {
+					__sveltekit_ks2v6l = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0Z7KoxUh.js"),
-						import("./_app/immutable/entry/app.DuinOSSF.js")
+						import("./_app/immutable/entry/start.ujyuv-BX.js"),
+						import("./_app/immutable/entry/app.UxvkzqiA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
