deploy: 90a0589ef7c9aca2467e6c125d75897203173ce1

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CGpqWVV-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B1azQirL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BV1E3Ugx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CdRvWE9s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DNQds-M0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CPP-35WV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0JJtG2h.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.J6EFwSQi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.o_ELHQxv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.w8egjE6v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CouMW1-_.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_hxgn6l = {
+					__sveltekit_2zsvgx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CGpqWVV-.js"),
-						import("./_app/immutable/entry/app.DNQds-M0.js")
+						import("./_app/immutable/entry/start.BV1E3Ugx.js"),
+						import("./_app/immutable/entry/app.CPP-35WV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
