--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BV1E3Ugx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CdRvWE9s.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CexcJ78f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.LFnCvzVN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CPP-35WV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Di8JM-SS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.J6EFwSQi.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DsOWkyp8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.w8egjE6v.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DA3_zMNz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.BruVQKqL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BiQ8TT8c.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_2zsvgx = {
+					__sveltekit_pz3svp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BV1E3Ugx.js"),
-						import("./_app/immutable/entry/app.CPP-35WV.js")
+						import("./_app/immutable/entry/start.CexcJ78f.js"),
+						import("./_app/immutable/entry/app.Di8JM-SS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
