deploy: ca2a8934cb59a17ea27e3d83f84c9600832a5751

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CexcJ78f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.LFnCvzVN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BGd4bxe2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cr068VsW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Di8JM-SS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BFzY-Qyz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DsOWkyp8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.8K4wuF7y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DA3_zMNz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BIMSdZa9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.B1xOigk7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BiQ8TT8c.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_pz3svp = {
+					__sveltekit_i3lq1o = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CexcJ78f.js"),
-						import("./_app/immutable/entry/app.Di8JM-SS.js")
+						import("./_app/immutable/entry/start.BGd4bxe2.js"),
+						import("./_app/immutable/entry/app.BFzY-Qyz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
