--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BGd4bxe2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cr068VsW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CeTkIKkT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-VXNehuE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BFzY-Qyz.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BkafFsPp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.8K4wuF7y.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CVEZnfC2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BIMSdZa9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3qtIdYXg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CouMW1-_.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_i3lq1o = {
+					__sveltekit_b0xhul = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BGd4bxe2.js"),
-						import("./_app/immutable/entry/app.BFzY-Qyz.js")
+						import("./_app/immutable/entry/start.CeTkIKkT.js"),
+						import("./_app/immutable/entry/app.BkafFsPp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
