--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B3tJKHiO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DB6mk8pC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C0ot4z2z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.q9-RQPVG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DDr4Obdx.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D6KCFAyB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B8zBEiLK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BDGG8Z79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDsBjsTn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CTEkstN-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.zKjb13Qv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DRxvZ-pR.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.HFD5XcnU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4G0sLbD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DP9Sx5Ny.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.R76BC5xW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.tPGF1xG6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CouMW1-_.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1pc4j6c = {
+					__sveltekit_1ej12kc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B3tJKHiO.js"),
-						import("./_app/immutable/entry/app.D6KCFAyB.js")
+						import("./_app/immutable/entry/start.C0ot4z2z.js"),
+						import("./_app/immutable/entry/app.B8zBEiLK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
