--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ppifsi7j.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CFSu6Wbp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start._BlyQaEy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D7VV4kT8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C_4J7kmI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BcvQEJtX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.wpOE_bCI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BflLyqKZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.oW2_q4WS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CFwZ0_Yl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dkd27kZM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BrWndmuR.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_niqg7q = {
+					__sveltekit_1qmxiyf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ppifsi7j.js"),
-						import("./_app/immutable/entry/app.C_4J7kmI.js")
+						import("./_app/immutable/entry/start._BlyQaEy.js"),
+						import("./_app/immutable/entry/app.BcvQEJtX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
