deploy: 983213d51e6933dfa37e8040a176d17596f9f8bf

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DOjq-zCq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D522NbjH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CrUSTc0m.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.hdrrOtP7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BzTtMj1a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CckxyoFR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DJjGXmsw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B4r6Cbsr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BQHQDxRT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cr-Vj7fx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BlOPhHr1.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_dkkz13 = {
+					__sveltekit_dfg5bs = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DOjq-zCq.js"),
-						import("./_app/immutable/entry/app.BzTtMj1a.js")
+						import("./_app/immutable/entry/start.CrUSTc0m.js"),
+						import("./_app/immutable/entry/app.CckxyoFR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
