--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DNfg2M0H.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.aWedJMHv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BXRfWBHv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Z4MUi9_4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DhB1m38t.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.RUCT8nTB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BxAdk2bF.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DiMmJ0hb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CPBPTNNe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DVogKAyM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dkd27kZM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BrWndmuR.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_srivzt = {
+					__sveltekit_1syrxml = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DNfg2M0H.js"),
-						import("./_app/immutable/entry/app.DhB1m38t.js")
+						import("./_app/immutable/entry/start.BXRfWBHv.js"),
+						import("./_app/immutable/entry/app.RUCT8nTB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
