deploy: 817537afb3344271fe9d066d23b291f1551ce5d2

--- a/completions.html
+++ b/completions.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BXRfWBHv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Z4MUi9_4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DrEVCLBR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BiQhxtQR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.RUCT8nTB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.720IY8jQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DiMmJ0hb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnjYzJaf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DVogKAyM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.2vPcbZRF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dkd27kZM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.DFD8IR65.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BrWndmuR.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1syrxml = {
+					__sveltekit_17a6vcp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BXRfWBHv.js"),
-						import("./_app/immutable/entry/app.RUCT8nTB.js")
+						import("./_app/immutable/entry/start.DrEVCLBR.js"),
+						import("./_app/immutable/entry/app.720IY8jQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
