deploy: e2e57735e956fcd85f7c6142e5c58a2bbe1a411b

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DrEVCLBR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BiQhxtQR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BznorF4U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CgJsa9yE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.720IY8jQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5R8tT5Sz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnjYzJaf.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.XJ1oJUue.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.2vPcbZRF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B67v0NDO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BlOPhHr1.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_17a6vcp = {
+					__sveltekit_gb6n4t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DrEVCLBR.js"),
-						import("./_app/immutable/entry/app.720IY8jQ.js")
+						import("./_app/immutable/entry/start.BznorF4U.js"),
+						import("./_app/immutable/entry/app.5R8tT5Sz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
