--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BznorF4U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CgJsa9yE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.rAl0xeOE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5R8tT5Sz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.B8as1Pu0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Blkwc_NR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.DlNjr2KD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D3olmmt7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XJ1oJUue.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.N1bvjmYo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B67v0NDO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ys3HcKrg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BlOPhHr1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CzF3fWL7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BhxJOrnA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.HfjRzS5m.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B1Ka6PkQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.Dm-v7Hl8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DNe7A0TO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DLtt6YIS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_MGnqyc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DXturo_0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.suMxYsbr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cq0-JPrR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dvj80Xfg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BJOs0fs1.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!--[--><header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="./" class="svelte-1qgrqm ">Home</a> <a href="completions" class="svelte-1qgrqm ">Completion API Visualizer</a> <a href="embeddings" class="svelte-1qgrqm ">Embeddings and Cosine Similarity Checker</a></nav> <!--[--><a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg></a><!--]--></header> <main class="svelte-1qgrqm"><!--[--><!--[--><div class="top-page svelte-1azi8io"><p>This site contains small utilities that are frequently used when developing products using
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_gb6n4t = {
+					__sveltekit_t0b1zp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BznorF4U.js"),
-						import("./_app/immutable/entry/app.5R8tT5Sz.js")
+						import("./_app/immutable/entry/start.CzF3fWL7.js"),
+						import("./_app/immutable/entry/app.B1Ka6PkQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
