--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DfmphCqF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D21WIVy2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DlfEif2P.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BvYG5eF0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.HfjRzS5m.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.VTzsEIQp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ckjNUhSr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Dm-v7Hl8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DNe7A0TO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DLtt6YIS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_MGnqyc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CnGrwgTa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYahjxxn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.suMxYsbr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DWYqtNRr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DhOAJeaC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dvj80Xfg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.AINoXFKd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.B10oYHgm.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_11myxsk = {
+					__sveltekit_3yfz9s = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DfmphCqF.js"),
-						import("./_app/immutable/entry/app.VTzsEIQp.js")
+						import("./_app/immutable/entry/start.DlfEif2P.js"),
+						import("./_app/immutable/entry/app.ckjNUhSr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
