deploy: 661f3a2d0c88ea1631a6252596b58db3044af6fd

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DlfEif2P.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BvYG5eF0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BH_WG7iw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CpZCO5cH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.HfjRzS5m.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ckjNUhSr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DVGCoWDF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Dm-v7Hl8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DNe7A0TO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DLtt6YIS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_MGnqyc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYahjxxn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.hUvihX8v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.suMxYsbr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DhOAJeaC.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.rVvD6tAJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dvj80Xfg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BNF-kHB2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.B10oYHgm.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_3yfz9s = {
+					__sveltekit_1bnstdm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DlfEif2P.js"),
-						import("./_app/immutable/entry/app.ckjNUhSr.js")
+						import("./_app/immutable/entry/start.BH_WG7iw.js"),
+						import("./_app/immutable/entry/app.DVGCoWDF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
