deploy: d99851f2dd5b6cc457bcdb3a1853582bc0c3e32e

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BH_WG7iw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CpZCO5cH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.s_0FZOg8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BnyGODwk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.HfjRzS5m.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DVGCoWDF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.x6-lYVzK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Dm-v7Hl8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DNe7A0TO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DLtt6YIS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_MGnqyc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.hUvihX8v.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CKJfFozp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.suMxYsbr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.rVvD6tAJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Dk7YSfnc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dvj80Xfg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.AINoXFKd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.B10oYHgm.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1bnstdm = {
+					__sveltekit_96mhi3 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BH_WG7iw.js"),
-						import("./_app/immutable/entry/app.DVGCoWDF.js")
+						import("./_app/immutable/entry/start.s_0FZOg8.js"),
+						import("./_app/immutable/entry/app.x6-lYVzK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
