--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.s_0FZOg8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BnyGODwk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ChjJAIXV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BdJl2B8K.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.HfjRzS5m.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.x6-lYVzK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D2P7NVuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Dm-v7Hl8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DNe7A0TO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DLtt6YIS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_MGnqyc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CKJfFozp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DQjAOnvd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.suMxYsbr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Dk7YSfnc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.8wEpjSBA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dvj80Xfg.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BNF-kHB2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.B10oYHgm.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_96mhi3 = {
+					__sveltekit_1837lkv = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.s_0FZOg8.js"),
-						import("./_app/immutable/entry/app.x6-lYVzK.js")
+						import("./_app/immutable/entry/start.ChjJAIXV.js"),
+						import("./_app/immutable/entry/app.D2P7NVuh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
