deploy: 3c48beeb2a06611dee5664a6ffc95fe9735dfa2e

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.8XsGnTe2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DJSm6IZy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CsMcWaNy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BqsjKhX2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BIgQ6Cmd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1AmM5wcS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CTUbGi1h.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.DY_SiphA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.973PY7Sa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BIe_S-Lq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Bpx4ldZh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.6TlQEaIw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cn5zm6cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CdcyGare.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.R7ETDblI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BiCpvG59.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dd5yjU3j.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BzGUs5SV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CKZwY7-l.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kyrjl = {
+					__sveltekit_t2syu2 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.8XsGnTe2.js"),
-						import("./_app/immutable/entry/app.1AmM5wcS.js")
+						import("./_app/immutable/entry/start.CsMcWaNy.js"),
+						import("./_app/immutable/entry/app.CTUbGi1h.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
