deploy: 617e604eaa2fac6ddac3b62304c5f8024ed689d7

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CsMcWaNy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BqsjKhX2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D1YfwmjM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BNfT86z8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BIgQ6Cmd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CTUbGi1h.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C7MJdyAA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.DY_SiphA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.973PY7Sa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BIe_S-Lq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Bpx4ldZh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cn5zm6cd.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BtnlSbRZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CdcyGare.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BiCpvG59.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C0Z2ckmv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Dd5yjU3j.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BzGUs5SV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CKZwY7-l.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_t2syu2 = {
+					__sveltekit_14ajth9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CsMcWaNy.js"),
-						import("./_app/immutable/entry/app.CTUbGi1h.js")
+						import("./_app/immutable/entry/start.D1YfwmjM.js"),
+						import("./_app/immutable/entry/app.C7MJdyAA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
